tests/functional/lang/eval-fail/assert-equal-attrs-names-2.err.exp
error:
       … while evaluating the condition of the assertion '({ a = true; } == { a = true; b = true; })'
         at /pwd/lang/eval-fail/assert-equal-attrs-names-2.nix:1:1:
            1| assert
             | ^
            2|   {

       error: attribute names of attribute set '{ a = true; }' differs from attribute set '{ a = true; b = true; }'
